# MG

./: CMakeLists.txt  CMakeLists.txt~
eigen3/: ._signature_of_eigen3_matrix_library
glfw/: CMakeLists.txt
shaders/: blinn.frag  blinn.vert  simple.frag  simple.vert
src/: Mesh.cpp  Mesh.h  Meshloader.cpp  Meshloader.h  Octree.cpp  Octree.h  OpenGL.h  Pointcloud.cpp  Pointcloud.h  Shader.cpp  Shader.h  Shape.h  Sphere.cpp  Sphere.h  Trackball.cpp  Trackball.h  WireCube.cpp  WireCube.h  bpa.cpp  bpa.h  common.h  main.cpp  volonoi.cpp  volonoi.h
